# lpp-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ast.h  builtin.h  cleaner.h  conanfile.txt  evaluator.h  lexer.cpp  lexer.h  main.cpp  object.h  parser.cpp  parser.h  repl.cpp  token.h  utils.h
.github/workflows/: cmake.yml
catch2/: CMakeLists.txt
tests/: CMakeLists.txt  ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  parser_test.cpp
